--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fontsource/roboto": "^5.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@it-incubator/eslint-config": "^0.1.3",
@@ -36,6 +37,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.13",
